Support GracePeriodSeconds for in-place update (#241)
